--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <link rel="stylesheet" href="master.css" media="screen" title="no title" charset="utf-8">
+    <title>Git Merge Example</title>
   </head>
   <body>
 
